# personal-finances-dbt

./: .envrc  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .sqlfluff  .sqlfluffignore  .user.yml  DOCKER.md  DOCUMENTATION_FRAMEWORK.md  README.md  dbt_project.yml  packages.yml  profiles.yml  pyproject.toml
.claude/: README.md  enrich_docs_with_samples.py  settings.json
.claude/skills/: data-testing.md  enrich-docs.md  write-dbt-docs.md
.github/ISSUE_TEMPLATE/: setup-docs-deployment.md
.github/workflows/: README.md  deploy-dbt-docs.yml
dashboard/: fetch_data.py  index.html
models/: sources.yml
models/dimensions/: _dimensions__models.yml  dim_categories.sql  dim_dates.sql
models/facts/bank/: _bank_facts__models.yml  fact_bank_transactions.sql
models/facts/fx/: _fx_facts__models.yml  fact_eur_exchange_rates_long.sql
models/facts/invm/: _invm_facts__models.yml  fact_invm_balances_line_items.sql  fact_invm_balances_sgd_movement.sql
models/marts/: _marts__models.yml  mart_sgd_balances.sql  mart_transactions.sql
models/marts/bank/: _bank_marts__models.yml  mart_eur_bank_balances.sql  mart_eur_bank_transactions.sql  mart_sgd_bank_balances.sql  mart_sgd_bank_transactions.sql
models/marts/invm/: _invm_marts__models.yml  mart_sgd_invm_balances.sql
models/staging/bank/: _bank_staging__models.yml
models/staging/fx/: _fx_staging__models.yml  fx_sources.yml  stg_fx_fx_eur.sql  stg_fx_fx_sgd.sql  stg_fx_fx_sgd_from_eur_ecb.sql
models/staging/invm/: _invm_staging__models.yml  invm_sources.yml  stg_invm_hkdusd_invm.sql  (+4 more)
seeds/: categories.csv
(+25 files in other folders)
