[tool.sqlfluff.core]
dialect = "bigquery"
templater = "dbt"
max_line_length = 120
[tool.sqlfluff.templater.dbt]
profiles_dir = "."
project_dir = "."
[tool.sqlfluff.indentation]
indent_unit = "space"
tab_space_size = 4

[tool.poetry]
name = "finances-dbt"
version = "0.1.0"
description = ""
authors = ["jeremychia <jeremyjchia@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
dbt-core = ">=1.9, <2.0"
dbt-bigquery = ">=1.9, <2.0"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=3.0.0"
sqlfluff = ">=3.0.0"
sqlfluff-templater-dbt = ">=3.0.0"
black = ">=23.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
